# Kites

./: .gitignore  CMakeLists.txt  Doxyfile  KITES Workflow.md  LICENSE.md  main.cpp
examples/: pipeline_test_code.s
include/: config.h
include/assembler/: assembler.h  parser.h
include/ui/: editortab.h  editortab.ui  kitestab.h  memorymodel.h  memorytab.h  processor_dialog.h  processortab.h  registercontainer.h  registermodel.h
include/vm/: memory_controller.h  pipeline_registers.h  registers.h  vm_base.h  vm_factory.h  vm_manager.h  vm_types.h
include/vm/rv5s/: rv5s_control_unit.h  rv5s_vm.h
include/vm/rv5s_vms/: rv5s_vm_base.h  rv5svm_nh_nf.h
include/vm/rvss/: rvss_vm.h
src/: mainwindow.cpp  mainwindow.h  mainwindow.ui  vm_runner.cpp
src/assembler/: assembler.cpp
src/ui/: editortab.cpp  kitestab.cpp  memorymodel.cpp  memorytab.cpp  memorytab.ui  memorytab.ui.autosave  processor_dialog.cpp  processor_dialog.ui  processortab.cpp  processortab.ui  registercontainer.cpp  registercontainer.ui  registermodel.cpp
src/vm/: registers.cpp  vm_base.cpp  vm_factory.cpp  vm_manager.cpp
src/vm/rv5s/: rv5s_control_unit.cpp
src/vm/rv5s_vms/: rv5s_control_unit.cpp  rv5s_nh_nf.cpp
src/vm/rvss/: rvss_control_unit.cpp  rvss_vm.cpp
test/: rv5s_test.cpp
